<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="or">OR</string>
    <string name="need_to_register">Need to Register?</string>
    <string name="move_to_register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="to_login">Login</string>
    <string name="need_to_login">To Login?</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="other">other</string>
    <string name="firstname">firstname</string>
    <string name="reset_password">Reset Password?</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
</resources>